
  * Wrap TcpTransport.ToString() to avoid throwing exceptions on
    invalid handles.

  * Ensure Server and Client are started at the end of
    StartSeparateListeningThread() <https://papyrus.usask.ca/trac/gt/ticket/56>

  * Client.Get*Stream(): check that streams are still active
    <https://papyrus.usask.ca/trac/gt/ticket/71>

  * Exposed an IStream's connexion through a Connexion property

  * UdpAccept and TcpAcceptor should now properly trap and report
    exceptions <https://papyrus.usask.ca/trac/gt/ticket/55>


=== GT 2.0 ===

GT 2.0 has undergone a significant re-architecturing from GT 1.0
to promote more flexibility and extensibility.  There have been a
number of breaking changes, primarily dealing with type renaming.

Breaking Changes:

  * As part of reorganizing the code, we've renamed the namespaces
    (GTServer and GTClient -> GT.Net) and introduced a new assembly to
    hold common components (GTBase). 
    <https://papyrus.usask.ca/trac/gt/ticket/7>

      * Change all the uses
	  'using GTServer;'  ->  'using GT.Net;'
	  'using GTClient;'  ->  'using GT.Net;'

      * You will need to add the GTBase project or DLL to your clients.
	<https://papyrus.usask.ca/trac/gt/ticket/13>

  * The TCP and UDP protocols have been separated out and generalized
    from the code into implementations called transports (see ITransport).
    The MessageProtocol enum has disappeared: clients now request 
    a communication protocol by describing the requirements for
    sending a message; GT will use these requirements to find a suitable
    transport.

  * Many classes have been shielded by interfaces, notably the *Stream
    classes provided by GT Client.  The Client.Get*Stream() methods now
    return interfaces (i.e., IStringStream, IBinaryStream, IObjectStream,
    ISessionStream, ITupleStream*).  The Client.GetStreamedTuple*()
    methods now also return interfaces (i.e., IStreamedTuple).

  * GT Server's Server.Client has been renamed to ClientConnexion,